Integrated new and create actions for portfolios

--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -5,7 +5,7 @@
     <p><%= p.title %></p>
     <p><%= p.subtitle %></p>
     <p><%= p.body %></p>
-    <p><%= image_tag p.thumb_image %></p>
+    <p><%= image_tag p.main_image unless portfolio_item.main_image.nil? %></p>
   </div>
   <hr>
 <% end %>
