Added new and edit buttons for portfolio items

--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,11 +1,14 @@
 <h1>Portfolio Items</h1>
 
+<%= link_to "Create New Item", new_portfolio_path %>
+
 <% @portfolio_items.each do |p| %>
   <div>
     <p><%= p.title %></p>
     <p><%= p.subtitle %></p>
     <p><%= p.body %></p>
-    <p><%= image_tag p.main_image unless portfolio_item.main_image.nil? %></p>
+    <p><%= image_tag p.main_image unless p.main_image.nil? %></p>
   </div>
+  <%= link_to "Edit Portfolio Item", edit_portfolio_path(p.id) %>
   <hr>
 <% end %>
