--- a/app/views/portfolios/edit.html.erb
+++ b/app/views/portfolios/edit.html.erb
@@ -1,5 +1,5 @@
 <h1>Edit this portfolio item</h1>
-
+<%= link_to "Back to Portfolios", portfolios_path %>
 <%= form_with(model: @portfolio_item, local: true) do |form| %>
 
   <div class="field">
