--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -9,6 +9,7 @@
     <p><%= p.body %></p>
     <p><%= image_tag p.main_image unless p.main_image.nil? %></p>
   </div>
-  <%= link_to "Edit Portfolio Item", edit_portfolio_path(p) %>
+  <%= link_to "Edit", edit_portfolio_path(p) %>
+  <%= link_to "Delete", portfolio_path(p), method: :delete, data: { confirm: 'Are you sure?' } %>
   <hr>
 <% end %>
