--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -4,7 +4,7 @@
 
 <% @portfolio_items.each do |p| %>
   <div>
-    <h2><%= link_to p.title, portfolio_path(p) %></h2>
+    <h2><%= link_to p.title, portfolio_show_path(p) %></h2>
     <p><%= p.subtitle %></p>
     <p><%= p.body %></p>
     <p><%= image_tag p.main_image unless p.main_image.nil? %></p>
