--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -7,7 +7,7 @@
     <h2><%= link_to p.title, portfolio_show_path(p) %></h2>
     <p><%= p.subtitle %></p>
     <p><%= p.body %></p>
-    <p><%= image_tag p.main_image unless p.main_image.nil? %></p>
+    <p><%= image_tag p.thumb_image unless p.thumb_image.nil? %></p>
   </div>
   <%= link_to "Edit", edit_portfolio_path(p) %>
   <%= link_to "Delete", portfolio_path(p), method: :delete, data: { confirm: 'Are you sure?' } %>
