Implemented form configuration for nested attributes

--- a/app/views/portfolios/new.html.erb
+++ b/app/views/portfolios/new.html.erb
@@ -17,10 +17,22 @@
     <%= form.text_area :body %>
   </div>
 
+  <ul>
+    <%= form.fields_for :technologies do |t| %>
+    <li><%= t.label :name %>
+        <%= t.text_field :name %>
+    </li>
+    <% end %>
+  </ul>
+
+
+
   <div class="field">
     <%= form.label :main_image %>
     <%= form.text_area :main_image %>
   </div>
+
+
 
   <div class="actions">
     <%= form.submit %>
