--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -3,4 +3,8 @@
   <p><%= @portfolio_item.subtitle %></p>
   <p><%= @portfolio_item.body %></p>
   <p><%= image_tag @portfolio_item.main_image %></p>
+  <h2>Technologies Used</h2>
+  <% @portfolio_item.technologies.each do |t| %>
+    <p><%= t.name %></p>
+  <% end %>
 </div>
