--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,5 +19,8 @@
       <%= link_to "Login", new_user_session_path %>
     <% end %>
     <%= yield %>
+    <% if session[:source] %>
+    <p>Thanks for visiting from <%= session[:source] %></p>
+    <% end %>
   </body>
 </html>
