--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,14 +13,12 @@
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
-    <%= render "shared/nav", location: 'top'%>
+    <%= render "shared/nav", location: "top"%>
 
     <%= login_helper %>
 
     <%= yield %>
 
-    <% if session[:source] %>
-    <p>Thanks for visiting from <%= session[:source] %></p>
-    <% end %>
+    <%= source_helper("application") %>
   </body>
 </html>
