--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -18,10 +18,9 @@
 
     <%= yield %>
 
-    <%= render "shared/nav", location: 'bottom' %>
+    <%= render "shared/nav", location: "bottom" %>
 
-    <% if session[:source] %>
-    <p>Thanks for visiting from <%= session[:source] %></p>
-    <% end %>
+    <%= source_helper("blog") %>
+
   </body>
 </html>
