--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -19,8 +19,6 @@
 
     <%= yield %>
 
-    <% if session[:source] %>
-    <p>Thanks for visiting from <%= session[:source] %></p>
-    <% end %>
+    <%= source_helper("portfolio") %>
   </body>
 </html>
