--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,8 @@
 <h1>Pages#contact</h1>
-<p>Find me in app/views/pages/contact.html.erb</p>
+<p><%= number_to_phone "5555555555" %></p>
+
+<p><%= number_to_currency "234.22" %></p>
+
+<p><%= number_to_percentage "80.22" %></p>
+
+<p><%= number_with_delimiter "21412341234" %></p>
