integrated new gem into rails app for copyright

--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -15,8 +15,9 @@
 
 
     <%= login_helper %>
-
-    <%= yield %>
+    <div class="container">
+      <%= yield %>
+    </div>
 
     <%= render "shared/nav", location: "bottom" %>
 
