Updated styles for master layout file and added a view helper for active style

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,16 +12,20 @@
   </head>
 
   <body>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
 
-    <%= render "shared/nav", location: "top"%>
+      <%= render "shared/application_nav"%>
 
-    <%= login_helper %>
+      <%= login_helper %>
 
-    <%= yield %>
+      <%= yield %>
+      <footer class="mastfoot mt-auto">
+        <div class="inner">
+          <%= copyright_generator %>
+        </div>
+      </footer>
 
-    <%= copyright_generator %>
-    <%= source_helper("application") %>
+      <%= source_helper("application") %>
+    </div>
   </body>
 </html>
