Updated styles and added map for contact page. Also added code for petergate guestuser that was lost when the commit merge issue happened

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,46 @@
-<h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+<div class="page-about">
+  <h1>About Me.</h1>
+  <p>I'm a Boston based developer currently working for a company that provides hiring solutions to healthcare organizations.</p>
+  <p>I'm an avid </p>
+  <div class="resume">
+    <h2>Education</h2>
+    <div class="row">
+      <div class="col-12 col-sm-6">B.S. Environmental Engineering,</div>
+      <div class="col-12 col-sm-6"><span class="float-right"><span class="px-2">May, 2012</span>University of Vermont, Burlington VT</span></div>
+    </div>
+    <h2>Skills</h2>
+    <h5>Programming Languages:</h5>
+    <p>JavaScript, MSSQL, PostgreSQL ColdFusion, Oracle, C++, Python, Ruby, Liquid Script
+    Software: Visual Studio, GitHub, SalesForce, Jira, Confluence, SQL Server Management Studio, MySQL, Eclipse
+    Other: HTML, CSS, Bootstrap, JQuery</p>
+
+    <h5>Formal Coursework:</h5>
+    <p>Introduction to Programming with C++ (BU, 2015), Database Design using Oracle (BU, 2016)</p>
+
+    <h2>Work Experience</h2>
+
+    <p>HealthcareSource,</p>
+    <p>Woburn, MA</p>
+    <p>Technical Support Engineering<span class="float-right">March 2017 - Present</span></p>
+      <ul>
+        <li>Provide technical support for  Recruitment Marketing Application.</li>
+        <li>Triage internal and client submitted bugs.</li>
+        <li>Build and support mobile friendly custom career sites leveraging Liquid Script.</li>
+        <li>Job Board Operations Specialist, Web Developer, Tier II	March 2015 - March 2017</li>
+        <li>Provide technical support for applicant tracking and onboarding solution, Position Manager.</li>
+        <li>Build mobile friendly job applications using Coldfusion, Javascript, HTML, and CSS that allow prospective employees to apply for open positions.</li>
+        <li>Develop and update stored procedures to enhance and streamline job query results.</li>
+        <li>Build custom reports, using MSSQL, accessible to clients through Position Manager Dashboard.</li>
+        <li>Build electronic PDF’s for clients’ onboarding process.</li>
+        <li>Train interns and new employees</li>
+        <li>Conduct code reviews</li>
+      </ul>
+
+    <p>Cardio Pulmonary Corporation, Intern<span class="float-right">June 2009-September 2009</span></p>
+    <p>Milford, CT</p>
+      <ul>
+        <li>Tested and implemented backup software on the company servers to replicate and save documents and files at an alternate location.</li>
+        <li>Constructed hardware used in the monitoring of hospital patients.</li>
+      </ul>
+  </div>
+</div>
