--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,8 +28,8 @@ a:hover {
 
 html,
 body {
-  height: 100%;
   background-color: #333;
+  height: 100vh;
 }
 
 body {
@@ -40,8 +40,12 @@ body {
   box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
 }
 
+body.about {
+  height: auto;
+}
+
 .cover-container {
-  max-width: 42em;
+  max-width: 55em;
 }
 
 
@@ -97,6 +101,19 @@ body {
 .cover .btn-lg {
   padding: .75rem 1.25rem;
   font-weight: 700;
+}
+
+
+/* Pages */
+/* About */
+
+.page-about {
+  margin: 25px
+}
+@media (min-width: 48em) {
+  .page-about {
+    margin: 100px 0;
+  }
 }
 
 
