--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,19 +11,14 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
+  <body class="<%= action_name %>">
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
 
       <%= render "shared/application_nav"%>
 
-      <%= login_helper %>
-
       <%= yield %>
-      <footer class="mastfoot mt-auto">
-        <div class="inner">
-          <%= copyright_generator %>
-        </div>
-      </footer>
+
+      <%= render "shared/application_footer" %>
 
       <%= source_helper("application") %>
     </div>
