--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,8 +1,13 @@
-<h1>Pages#contact</h1>
-<p><%= number_to_phone "5555555555" %></p>
-
-<p><%= number_to_currency "234.22" %></p>
-
-<p><%= number_to_percentage "80.22" %></p>
-
-<p><%= number_with_delimiter "21412341234" %></p>
+<div class="row">
+  <div class="col-12">
+    <h1>Contact</h1>
+  </div>
+  <div class="col-12 col-sm-6">
+    <p>Office: 100 Sylvan Rd Suite 100, Woburn, MA 01801</p>
+    <p>Phone: <%= number_to_phone "2039278932" %></p>
+    <p><a href="mailto:tejota317@gmail.com?subject=PortfolioContact">Click here to email me</a></p>
+  </div>
+  <div class="col-12 col-md-6">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2941.623845892428!2d-71.1642647843445!3d42.49954893427336!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e375169621e2c3%3A0xe1a3a3f1d27a57f7!2sHealthcareSource!5e0!3m2!1sen!2sus!4v1571005131860!5m2!1sen!2sus" width="400" height="350" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+  </div>
+</div>
