--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
-<main role="main" class="inner cover">
-  <h1 class="cover-heading">Cover your page.</h1>
-  <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
+<div role="main" class="inner cover text-center">
+  <h1 class="cover-heading">Hi there.</h1>
+  <p class="lead">I'm a curious developer currently dabbling in the world of ruby.</p>
   <p class="lead">
-    <a href="#" class="btn btn-lg btn-secondary">Learn more</a>
+    <%= link_to "About Me", about_path, class: "btn btn-lg btn-secondary" %>
   </p>
-</main>
+</div>
