Added styles for edit form

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -116,6 +116,16 @@ body.about {
   }
 }
 
+/*User */
+
+.card-body {
+    color: black;
+}
+
+.auth-links a {
+  color: black;
+}
+
 
 /*
  * Footer
