--- a/app/views/blogs/_blog.html.erb
+++ b/app/views/blogs/_blog.html.erb
@@ -1,9 +1,12 @@
-<tr>
-  <td><%= blog.title %></td>
-  <td>published <%= distance_of_time_in_words(blog.created_at, Time.now) %> ago</td>
-  <td><%= blog.body %></td>
-  <td><%= link_to blog.status, toggle_status_blog_path(blog) %></td>
-  <td><%= link_to 'Show', blog %></td>
-  <td><%= link_to 'Edit', edit_blog_path(blog) %></td>
-  <td><%= link_to 'Destroy', blog, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-</tr>
+
+
+<div class="blog-post">
+  <h2 class="blog-post-title"><%= link_to "#{blog.title}", blog %></h2>
+  <p class="blog-post-meta">published <%= distance_of_time_in_words(blog.created_at, Time.now) %> ago</p>
+  <p><%= blog.body %></p>
+
+  <%= link_to blog.status, toggle_status_blog_path(blog) %>
+  <%= link_to 'Show', blog %>
+  <%= link_to 'Edit', edit_blog_path(blog) %>
+  <%= link_to 'Destroy', blog, method: :delete, data: { confirm: 'Are you sure?' } %>
+</div>
