--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,7 +1,5 @@
-<div class="<%= location %>">
-  <div><%= link_to "Home", root_path %></div>
-  <div><%= link_to "About Me", about_path %></div>
-  <div><%= link_to "Contact", contact_path %></div>
-  <div><%= link_to "Blog", blogs_path %></div>
-  <div><%= link_to "Portfolio", portfolios_path %></div>
-</div>
+<%= link_to "Home", root_path, class: "#{style}" %>
+<%= link_to "About Me", about_path, class: "#{style}" %>
+<%= link_to "Contact", contact_path, class: "#{style}" %>
+<%= link_to "Blog", blogs_path, class: "#{style}" %>
+<%= link_to "Portfolio", portfolios_path, class: "#{style}" %>
