--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -16,29 +16,10 @@
     <p class="alert"><%= alert %></p>
 
     <div class="container">
-      <header class="blog-header py-3">
-        <div class="row flex-nowrap justify-content-between align-items-center">
-          <div class="col-4 pt-1">
-            <a class="text-muted" href="#">Subscribe</a>
-          </div>
-          <div class="col-4 text-center">
-            <a class="blog-header-logo text-dark" href="#">Large</a>
-          </div>
-          <div class="col-4 d-flex justify-content-end align-items-center btn-group">
-            <a class="text-muted btn btn-sm btn-outline-secondary" href="#">
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="mx-3" role="img" viewBox="0 0 24 24" focusable="false"><title>Search</title><circle cx="10.5" cy="10.5" r="7.5"/><path d="M21 21l-5.2-5.2"/></svg>
-            </a>
-            <%= login_helper "btn btn-sm btn-outline-secondary" %>
 
-          </div>
-        </div>
-      </header>
+      <%= render "shared/blog_header" %>
+      <%= render "shared/blog_nav" %>
 
-      <div class="nav-scroller py-1 mb-2">
-        <nav class="nav d-flex justify-content-between">
-          <%= render "shared/nav", style: "p-2 text-muted" %>
-        </nav>
-      </div>
       <%= yield %>
 
       <!-- start of side bar -->
@@ -86,7 +67,7 @@
       <a href="#">Back to top</a>
     </p>
   </footer>
-  
+
       <%= source_helper("blog") %>
 
   </body>
