--- a/app/views/blogs/edit.html.erb
+++ b/app/views/blogs/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing Blog</h1>
-
-<%= render 'form', blog: @blog %>
-
-<%= link_to 'Show', @blog %> |
-<%= link_to 'Back', blogs_path %>
+<div class="col-md-8 blog-main">
+  <div class="blog-post">
+    <h1>Editing Blog</h1>
+    <%= link_to 'Show', @blog %> |
+    <%= link_to 'Back', blogs_path %>
+    <%= render 'form', blog: @blog %>
+  </div>
+</div>
