--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,16 +1,12 @@
 <div class="col-md-8 blog-main">
-  <p id="notice"><%= notice %></p>
-
-  <p>
-    <strong>Title:</strong>
-    <%= @blog.title %>
-  </p>
-
-  <p>
-    <strong>Body:</strong>
-    <%= @blog.body %>
-  </p>
-
-  <%= link_to 'Edit', edit_blog_path(@blog) %> |
-  <%= link_to 'Back', blogs_path %>
+  <div class="blog-post">
+    <h2 class="blog-post-title"> <%= @blog.title %></h2>
+    <% if logged_in?(:site_admin) %>
+      <p class="blog-post-meta">
+        <%= link_to 'Edit', edit_blog_path(@blog) %> |
+        <%= link_to 'Back', blogs_path %>
+      </p>
+    <% end %>
+    <p><%= @blog.body %></p>
+  </div>
 </div>
