--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -26,12 +26,7 @@
       </div>
     </main>
   <!-- start of footer -->
-  <footer class="blog-footer">
-    <p>Blog template built for <a href="https://getbootstrap.com/">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
-    <p>
-      <a href="#">Back to top</a>
-    </p>
-  </footer>
+  <%= render "shared/blog_footer" %>
 
       <%= source_helper("blog") %>
 
