--- a/app/views/portfolios/_portfolio_item.html.erb
+++ b/app/views/portfolios/_portfolio_item.html.erb
@@ -1,9 +1,17 @@
-<div>
-  <h2><%= link_to portfolio_item.title, portfolio_show_path(portfolio_item) %></h2>
-  <p><%= portfolio_item.subtitle %></p>
-  <p><%= portfolio_item.body %></p>
-  <p><%= image_tag portfolio_item.thumb_image unless portfolio_item.thumb_image.nil? %></p>
+<div class="col-md-4">
+  <div class="card mb-4 shadow-sm">
+    <p><%= image_tag portfolio_item.thumb_image unless portfolio_item.thumb_image.nil? %></p>
+    <div class="card-body">
+      <h4 class="card-text">
+        <%= link_to portfolio_item.title, portfolio_show_path(portfolio_item) %>
+      </h4>
+      <p class="card-text"><%= portfolio_item.subtitle %></p>
+      <div class="d-flex justify-content-between align-items-center">
+        <div class="btn-group">
+          <%= link_to "Edit", edit_portfolio_path(portfolio_item), class: "btn btn-sm btn-outline-secondary" %>
+          <%= link_to "Delete", portfolio_path(portfolio_item), method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-sm btn-outline-secondary" %>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
-<%= link_to "Edit", edit_portfolio_path(portfolio_item) %>
-<%= link_to "Delete", portfolio_path(portfolio_item), method: :delete, data: { confirm: 'Are you sure?' } %>
-<hr>
