--- a/app/views/shared/_blog_header.html.erb
+++ b/app/views/shared/_blog_header.html.erb
@@ -4,7 +4,7 @@
       <a class="text-muted" href="#">Subscribe</a>
     </div>
     <div class="col-4 text-center">
-      <a class="blog-header-logo text-dark" href="#">Large</a>
+      <a class="blog-header-logo text-dark" href="#">My Blog</a>
     </div>
     <div class="col-4 d-flex justify-content-end align-items-center btn-group">
       <a class="text-muted btn btn-sm btn-outline-secondary" href="#">
