--- a/app/views/portfolios/_portfolio_item.html.erb
+++ b/app/views/portfolios/_portfolio_item.html.erb
@@ -7,10 +7,12 @@
       </h4>
       <p class="card-text"><%= portfolio_item.subtitle %></p>
       <div class="d-flex justify-content-between align-items-center">
+      <% if logged_in?(:site_admin) %>
         <div class="btn-group">
           <%= link_to "Edit", edit_portfolio_path(portfolio_item), class: "btn btn-sm btn-outline-secondary" %>
           <%= link_to "Delete", portfolio_path(portfolio_item), method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-sm btn-outline-secondary" %>
         </div>
+      <% end %>
       </div>
     </div>
   </div>
