updated form styles for portfolio

--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -21,7 +21,7 @@
     <%= form.text_area :body, class: "form-control"%>
   </div>
 
-  <div class="actions">
+  <div class="form-group">
     <%= form.submit "Submit", class: "btn btn-primary" %>
   </div>
 <% end %>
