--- a/app/views/portfolios/_form.html.erb
+++ b/app/views/portfolios/_form.html.erb
@@ -1,38 +1,43 @@
 <%= form_with(model: portfolio_item, local: true) do |form| %>
+  <div class="row">
+    <div class="col-md-6">
+      <div class="form-group">
+        <%= form.label :title %>
+        <%= form.text_field :title, class: "form-control" %>
+      </div>
 
-  <div class="field">
-    <%= form.label :title %>
-    <%= form.text_field :title %>
+      <div class="form-group">
+        <%= form.label :subtitle %>
+        <%= form.text_field :subtitle, class: "form-control" %>
+      </div>
+
+      <div class="form-group">
+        <%= form.label :main_image %>
+        <%= form.text_field :main_image, class: "form-control" %>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="form-group">
+        <%= form.label :body %>
+        <%= form.text_area :body, class: "form-control", rows: 9 %>
+      </div>
+    </div>
+    <div class="col-md-12">
+      <div>
+        <h3> Technologies Used:</h3>
+        <%= form.fields_for :technologies do |t| %>
+        <div class="form-group">
+          <%= t.label :name %>
+          <%= t.text_field :name, class: "form-control" %>
+        </div>
+        <% end %>
+      </div>
+
+      <div class="form-group">
+        <%= form.submit class: "btn btn-primary btn-block"%>
+      </div>
+    </div>
   </div>
 
-  <div class="field">
-    <%= form.label :subtitle %>
-    <%= form.text_field :subtitle %>
-  </div>
 
-  <div class="field">
-    <%= form.label :body %>
-    <%= form.text_area :body %>
-  </div>
-
-  <ul>
-    <%= form.fields_for :technologies do |t| %>
-    <li><%= t.label :name %>
-        <%= t.text_field :name %>
-    </li>
-    <% end %>
-  </ul>
-
-
-
-  <div class="field">
-    <%= form.label :main_image %>
-    <%= form.text_area :main_image %>
-  </div>
-
-
-
-  <div class="actions">
-    <%= form.submit %>
-  </div>
 <% end %>
