--- a/app/views/portfolios/edit.html.erb
+++ b/app/views/portfolios/edit.html.erb
@@ -1,3 +1,5 @@
-<h1>Edit this portfolio item</h1>
-<%= link_to "Back to Portfolios", portfolios_path %>
-<%= render 'form', portfolio_item: @portfolio_item %>
+<div class="container portfolio-form">
+  <h1>Edit this portfolio item</h1>
+  <%= link_to "Back to Portfolios", portfolios_path %>
+  <%= render 'form', portfolio_item: @portfolio_item %>
+</div>
