--- a/app/views/shared/_blog_nav.html.erb
+++ b/app/views/shared/_blog_nav.html.erb
@@ -1,5 +1,5 @@
 <div class="nav-scroller py-1 mb-2">
   <nav class="nav d-flex justify-content-between">
-    <%= render "shared/nav", style: "p-2 text-muted" %>
+    <%= nav_helper "nav-link text-muted", "span" %>
   </nav>
 </div>
