--- a/app/views/portfolios/_portfolio_item.html.erb
+++ b/app/views/portfolios/_portfolio_item.html.erb
@@ -1,5 +1,5 @@
 <div class="col-md-4">
-  <div class="card mb-4 shadow-sm">
+  <div class="card mb-4 shadow-sm" data-id="<%= portfolio_item.id %>">
     <p><%= image_tag portfolio_item.thumb_image unless portfolio_item.thumb_image.nil? %></p>
     <div class="card-body">
       <h4 class="card-text">
